# opengl-sfml-template

./: CMakeLists.txt  README.md
conan/: CMakeLists.txt  conanfile.txt
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/app/: GameLoop.cpp  GameLoop.h
